<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_medium"
    android:clipToPadding="false">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/elevation_std"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_large"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginBottom="@dimen/spacing_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me_description_short"
                />

            <include layout="@layout/layout_vertical_divider"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <!-- Name -->
            <include layout="@layout/contact_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_item"
                />

            <!-- Mail -->
            <include layout="@layout/contact_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mail_item"
                />

            <!-- Site -->
            <include layout="@layout/contact_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/site_item"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:layout_width="@dimen/social_button"
                    android:layout_height="@dimen/social_button"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@drawable/social_googleplus"
                    android:id="@+id/googleplus_item"/>

                <Button
                    android:layout_width="@dimen/social_button"
                    android:layout_height="@dimen/social_button"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@drawable/social_github"
                    android:id="@+id/github_item"/>

                <Button
                    android:layout_width="@dimen/social_button"
                    android:layout_height="@dimen/social_button"
                    android:layout_margin="@dimen/spacing_medium"
                    android:background="@drawable/social_linkedin"
                    android:id="@+id/linkedin_item"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>